ts-3: fix ide warnings